# opp

./: child2.cpp
lab1/: CMakeLists.txt  conversion_time.cpp  conversion_time.h  main.cpp  test1.cpp
lab5/: CMakeLists.txt  main.cpp  test.cpp
lab5/include/: allocator.h  node.h  queue.h
lab6/: main.cpp  main.py  test.cpp
lab6/include/: battle.h  bear.h  factory.h  npc.h  robber.h  werewolf.h
lab6/src/: battle.cpp  bear.cpp  npc.cpp  robber.cpp  werewolf.cpp
lab7/: CMakeLists.txt  main.cpp  test.cpp
lab7/include/: battle.h  bear.h  npc.h  robber.h  werewolf.h
lab7/src/: battle.cpp  bear.cpp  factory.cpp  npc.cpp  robber.cpp  werewolf.cpp
laba2/: CMakeLists.txt  test2.cpp  three_main.cpp
laba2/include/: Three.h
laba2/src/: Three.cpp
laba3/: CMakeLists.txt  CmakeLists.txt  array.cpp  figure.cpp  hexagon.cpp  main.cpp  point.cpp  point_vector.cpp  test.cpp
laba3/include/: array.h  figure.h  hexagon.h  pentagon.h  point.h  point_vector.h  rhombus.h
laba3/src/: array.cpp  figure.cpp  hexagon.cpp  pentagon.cpp  point.cpp  point_vector.cpp  rhombus.cpp
laba4/: CMakeLists.txt  main.cpp  test.cpp
laba4/include/: Rhombus.h  array.h  figure.h  hexagon.h  pentagon.h  point.h
laba4/src/: array_fig.hpp  array_figure.h  array_src.h  array_src.hpp  figure_src.h  figure_src.hpp  hexagon.h  hexagon.hpp  pentagon.h  pentagon.hpp  point_src.h  point_src.hpp  rhombus.h  rhombus.hpp
